--- a/SitecoreAdvancedCaching/SitecoreAdvancedCaching.csproj
+++ b/SitecoreAdvancedCaching/SitecoreAdvancedCaching.csproj
@@ -87,6 +87,8 @@
     <Compile Include="Events\PublishingStartEvent.cs" />
     <Compile Include="Events\IndexingEndEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rules\ExtendedRuleContext.cs" />
+    <Compile Include="Rules\ItemIdCondition.cs" />
     <Compile Include="Search\ItemRenderingsComputedField.cs" />
     <Compile Include="Search\PublishingTimestampComputedField.cs" />
     <Compile Include="Search\RenderingRulesComputedField.cs" />
