Following scenarios work: - Publishing a page - Publishing a rendering
Need to work on:
- Publishing an item
- Publishing an item and/or is descendants (relative and absolute)
- Publishing an item and/or is ancestors (relative and absolute)

--- a/SitecoreAdvancedCaching/App_Config/Include/Foundation/SitecoreAdvancedCaching.config
+++ b/SitecoreAdvancedCaching/App_Config/Include/Foundation/SitecoreAdvancedCaching.config
@@ -10,14 +10,20 @@
         <defaultSolrIndexConfiguration type="Sitecore.ContentSearch.SolrProvider.SolrIndexConfiguration, Sitecore.ContentSearch.SolrProvider">
           <documentOptions type="Sitecore.ContentSearch.SolrProvider.SolrDocumentBuilderOptions, Sitecore.ContentSearch.SolrProvider">
             <fields hint="raw:AddComputedIndexField">
+              <field fieldName="ItemHasLayout" returnType="bool" storageType="yes" indexType="untokenized">
+                SitecoreAdvancedCaching.Search.ItemHasLayoutComputedField, SitecoreAdvancedCaching
+              </field>
               <field fieldName="ItemRenderings" returnType="string" storageType="yes" indexType="untokenized">
                 SitecoreAdvancedCaching.Search.ItemRenderingsComputedField, SitecoreAdvancedCaching
+              </field>
+              <field fieldName="ItemDatasources" returnType="string" storageType="yes" indexType="untokenized">
+                SitecoreAdvancedCaching.Search.ItemDatasourcesComputedField, SitecoreAdvancedCaching
               </field>
               <field fieldName="PublishingTimestamp" returnType="string" storageType="yes" indexType="untokenized">
                 SitecoreAdvancedCaching.Search.PublishingTimestampComputedField, SitecoreAdvancedCaching
               </field>
-              <field fieldName="RenderingRules" returnType="string" storageType="yes" indexType="untokenized">
-                SitecoreAdvancedCaching.Search.RenderingRulesComputedField, SitecoreAdvancedCaching
+              <field fieldName="CachingRules" returnType="string" storageType="yes" indexType="untokenized">
+                SitecoreAdvancedCaching.Search.ItemCachingRulesComputedField, SitecoreAdvancedCaching
               </field>
             </fields>
           </documentOptions>
