--- a/SitecoreAdvancedCaching/packages.config
+++ b/SitecoreAdvancedCaching/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net462" />
-  <package id="Sitecore.Abstractions.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
-  <package id="Sitecore.ContentSearch.Linq.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
-  <package id="Sitecore.ContentSearch.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
-  <package id="Sitecore.Kernel.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
-  <package id="Sitecore.Mvc.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Abstractions" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.ContentSearch" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.ContentSearch.Linq" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Kernel" version="9.2.0" targetFramework="net472" />
+  <package id="Sitecore.Mvc" version="9.2.0" targetFramework="net472" />
 </packages>
