Module nearly working... Just need to figure out remote events.

--- a/SitecoreAdvancedCaching/App_Config/Include/zFoundation/zSitecoreAdvancedCaching.config
+++ b/SitecoreAdvancedCaching/App_Config/Include/zFoundation/zSitecoreAdvancedCaching.config
@@ -1,68 +1,50 @@
-﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:security="http://www.sitecore.net/xmlconfig/security/">
+﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
   <sitecore>
-    <itemManager defaultProvider="default">
+    <itemManager defaultProvider="default" role:require="Standalone or ContentDelivery">
       <providers>
         <clear />
         <add name="default" type="Sitecore.Data.Managers.ItemProvider, Sitecore.Kernel">
           <patch:delete />
         </add>
-        <add name="default" type="SitecoreAdvancedCaching.Providers.ItemTrackingProvider, SitecoreAdvancedCaching"/>
+        <add name="default" type="SitecoreAdvancedCaching.Providers.ItemTrackingProvider, SitecoreAdvancedCaching" />
       </providers>
     </itemManager>
-    <settings>
-      <setting name="DatasourceRootsToIndex" value="/sitecore/content"/>
-      <setting name="IndexName" value="sitecore_web_index"/>
-    </settings>
     <pipelines>
+      <initialize>
+        <processor type="SitecoreAdvancedCaching.Pipelines.ItemPublishingWatchProcesser, SitecoreAdvancedCaching" method="Initialize" role:require="Standalone or ContentDelivery" />
+      </initialize>
       <mvc.renderRendering>
         <processor
+          type="SitecoreAdvancedCaching.Cache.GenerateCacheKeyWithUIDBefore, SitecoreAdvancedCaching"
+          patch:after="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.GenerateCacheKey, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
+        <processor
           type="SitecoreAdvancedCaching.Pipelines.RenderingContextProcessor, SitecoreAdvancedCaching"
-          patch:before="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.InitializeProfiling, Sitecore.Mvc']" />
-        <processor 
-          type="SitecoreAdvancedCaching.Cache.GenerateCacheKeyWithUID, SitecoreAdvancedCaching" 
-          patch:before="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.AddRecordedHtmlToCache, Sitecore.Mvc']" />
+          patch:before="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.InitializeProfiling, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
+        <processor
+          type="SitecoreAdvancedCaching.Cache.GenerateCacheKeyWithUIDAfter, SitecoreAdvancedCaching"
+          patch:before="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.AddRecordedHtmlToCache, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
       </mvc.renderRendering>
     </pipelines>
-    <contentSearch>
-      <indexConfigurations>
-        <defaultSolrIndexConfiguration type="Sitecore.ContentSearch.SolrProvider.SolrIndexConfiguration, Sitecore.ContentSearch.SolrProvider">
-          <documentOptions type="Sitecore.ContentSearch.SolrProvider.SolrDocumentBuilderOptions, Sitecore.ContentSearch.SolrProvider">
-            <fields hint="raw:AddComputedIndexField">
-              <!-- <field fieldName="ItemHasLayout" returnType="bool" storageType="yes" indexType="untokenized"> -->
-              <!--   SitecoreAdvancedCaching.Search.ItemHasLayoutComputedField, SitecoreAdvancedCaching -->
-              <!-- </field> -->
-              <!-- <field fieldName="ItemRenderings" returnType="string" storageType="yes" indexType="untokenized"> -->
-              <!--   SitecoreAdvancedCaching.Search.ItemRenderingsComputedField, SitecoreAdvancedCaching -->
-              <!-- </field> -->
-              <!-- <field fieldName="ItemDatasources" returnType="string" storageType="yes" indexType="untokenized"> -->
-              <!--   SitecoreAdvancedCaching.Search.ItemDatasourcesComputedField, SitecoreAdvancedCaching -->
-              <!-- </field> -->
-              <field fieldName="PublishingTimestamp" returnType="string" storageType="yes" indexType="untokenized">
-                SitecoreAdvancedCaching.Search.PublishingTimestampComputedField, SitecoreAdvancedCaching
-              </field>
-              <!-- <field fieldName="CachingRules" returnType="string" storageType="yes" indexType="untokenized"> -->
-              <!--   SitecoreAdvancedCaching.Search.ItemCachingRulesComputedField, SitecoreAdvancedCaching -->
-              <!-- </field> -->
-            </fields>
-          </documentOptions>
-        </defaultSolrIndexConfiguration>
-      </indexConfigurations>
-    </contentSearch>
     <events>
-      <event name="publish:startPublishing">
-        <handler type="SitecoreAdvancedCaching.Events.PublishingStartEvent, SitecoreAdvancedCaching" method="SetPublishingStartTimestamp"/>
+      <event name="publish:itemProcessed">
+        <handler type="SitecoreAdvancedCaching.Events.ItemPublishNotifier, SitecoreAdvancedCaching" method="NotifyItemPublications" role:require="Standalone or ContentManagement"/>
+      </event>
+      <event name="publish:itemProcessed:Remote">
+        <handler type="SitecoreAdvancedCaching.Events.ClearCacheRemote, SitecoreAdvancedCaching" method="Clear" role:require="Standalone or ContentDelivery" />
       </event>
       <event name="publish:end">
         <handler type="Sitecore.Publishing.HtmlCacheClearer, Sitecore.Kernel" method="ClearCache">
           <patch:delete />
         </handler>
       </event>
-      <event name="indexing:end">
-        <handler type="SitecoreAdvancedCaching.Events.IndexingEndEvent, SitecoreAdvancedCaching" method="CaclculateRenderingCachesToClear"/>
+      <event name="publish:end:remote">
+        <handler type="Sitecore.Publishing.HtmlCacheClearer, Sitecore.Kernel" method="ClearCache">
+          <patch:delete />
+        </handler>
       </event>
-      <!-- <event name="caching"> -->
-      <!--   <handler type="SitecoreAdvancedCaching.Events.HtmlCacheClearingEvent, SitecoreAdvancedCaching" method="ClearHtmlCache"/> -->
-      <!-- </event> -->
     </events>
+    <controlSources>
+      <source mode="on" namespace="SitecoreAdvancedCaching.Controls" assembly="SitecoreAdvancedCaching" prefix="SitecoreAdvancedCaching"/>
+    </controlSources>
   </sitecore>
 </configuration>
