Images are now being cached Remote events still not working.

--- a/SitecoreAdvancedCaching/App_Config/Include/zFoundation/zSitecoreAdvancedCaching.config
+++ b/SitecoreAdvancedCaching/App_Config/Include/zFoundation/zSitecoreAdvancedCaching.config
@@ -1,5 +1,8 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
   <sitecore>
+    <settings>
+      <setting name="GlobalCacheableTemplateIDs" value="{DAF085E8-602E-43A6-8299-038FF171349F}"/>
+    </settings>
     <itemManager defaultProvider="default" role:require="Standalone or ContentDelivery">
       <providers>
         <clear />
@@ -30,7 +33,7 @@
         <handler type="SitecoreAdvancedCaching.Events.ItemPublishNotifier, SitecoreAdvancedCaching" method="NotifyItemPublications" role:require="Standalone or ContentManagement"/>
       </event>
       <event name="publish:itemProcessed:Remote">
-        <handler type="SitecoreAdvancedCaching.Events.ClearCacheRemote, SitecoreAdvancedCaching" method="Clear" role:require="Standalone or ContentDelivery" />
+        <handler type="SitecoreAdvancedCaching.Events.ItemPublished, SitecoreAdvancedCaching" method="Clear" role:require="Standalone or ContentDelivery" />
       </event>
       <event name="publish:end">
         <handler type="Sitecore.Publishing.HtmlCacheClearer, Sitecore.Kernel" method="ClearCache">
