Events are working correctly and CUD operation is being handled correctly
Bug wehere rendering has 2 cache keys for same uniqueId

--- a/SitecoreAdvancedCaching/App_Config/Include/zFoundation/zSitecoreAdvancedCaching.config
+++ b/SitecoreAdvancedCaching/App_Config/Include/zFoundation/zSitecoreAdvancedCaching.config
@@ -29,6 +29,9 @@
       </mvc.renderRendering>
     </pipelines>
     <events>
+      <event name="publish:itemProcessing">
+        <handler type="SitecoreAdvancedCaching.Events.ItemPrePublish, SitecoreAdvancedCaching" method="CalculatePublishOperation" role:require="Standalone or ContentManagement"/>
+      </event>
       <event name="publish:itemProcessed">
         <handler type="SitecoreAdvancedCaching.Events.ItemPublishNotifier, SitecoreAdvancedCaching" method="NotifyItemPublications" role:require="Standalone or ContentManagement"/>
       </event>
