avoided use of a dedicated thread by using System.Threading.Channels.

--- a/code/packages.config
+++ b/code/packages.config
@@ -5,4 +5,7 @@
   <package id="Sitecore.Abstractions.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Mvc.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net462" />
+  <package id="System.Threading.Channels" version="4.6.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net462" />
 </packages>
