--- a/code/Foundation.HtmlCache.csproj
+++ b/code/Foundation.HtmlCache.csproj
@@ -95,9 +95,18 @@
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.IO.FileSystem.Primitives" />
     <Reference Include="System.Runtime.Caching" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Threading.Channels, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Threading.Channels.4.6.0\lib\netstandard2.0\System.Threading.Channels.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\..\..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -130,13 +139,15 @@
     <Compile Include="Events\ItemPrePublish.cs" />
     <Compile Include="Events\ItemPublishNotifier.cs" />
     <Compile Include="Extensions\SiteInfoExtensions.cs" />
+    <Compile Include="Models\DeleteSiteFromCache.cs" />
     <Compile Include="Models\DeleteFromCache.cs" />
     <Compile Include="Models\AddToCache.cs" />
     <Compile Include="Models\ClearCacheOperation.cs" />
     <Compile Include="Models\ICacheJob.cs" />
     <Compile Include="Models\PublishOperation.cs" />
+    <Compile Include="Pipelines\EndRenderingContextProcessor.cs" />
     <Compile Include="Pipelines\RemoteEventSubscriber.cs" />
-    <Compile Include="Pipelines\RenderingContextProcessor.cs" />
+    <Compile Include="Pipelines\BeginRenderingContextProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ItemTrackingProvider.cs" />
   </ItemGroup>
