--- a/code/App_Config/Include/z.Foundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/z.Foundation/zFoundation.HtmlCache.config
@@ -25,31 +25,28 @@
       <mvc.renderRendering>
         <processor
           type="Foundation.HtmlCache.Pipelines.BeginRenderingContextProcessor, Foundation.HtmlCache"
-          patch:before="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.InitializeProfiling, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
-        <processor
-          type="Foundation.HtmlCache.Pipelines.SetCacheKeyToRenderingContextProcessor, Foundation.HtmlCache"
-          patch:after="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.GenerateCacheKey, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
+          patch:after="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.RenderFromCache, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
       </mvc.renderRendering>
     </pipelines>
     <events>
       <event name="publish:itemProcessing">
-        <handler type="ProDirect.Foundation.HtmlCache.Events.ItemPrePublish, ProDirect.Foundation.HtmlCache" method="CalculatePublishOperation" role:require="Standalone or ContentManagement"/>
+        <handler type="Foundation.HtmlCache.Events.ItemPrePublish, Foundation.HtmlCache" method="CalculatePublishOperation" role:require="Standalone or ContentManagement"/>
       </event>
       <event name="publish:itemProcessed">
-        <handler type="ProDirect.Foundation.HtmlCache.Events.ItemPublishNotifier, ProDirect.Foundation.HtmlCache" method="NotifyItemPublications" role:require="Standalone or ContentManagement"/>
+        <handler type="Foundation.HtmlCache.Events.ItemPublishNotifier, Foundation.HtmlCache" method="NotifyItemPublications" role:require="Standalone or ContentManagement"/>
       </event>
       <event name="publish:itemProcessed:Remote">
-        <handler type="ProDirect.Foundation.HtmlCache.Events.ItemPublished, ProDirect.Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
+        <handler type="Foundation.HtmlCache.Events.ItemPublished, Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
       </event>
 
       <event name="cache:clearCacheSite:Remote">
-        <handler type="ProDirect.Foundation.HtmlCache.Events.ClearCacheSite, ProDirect.Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
+        <handler type="Foundation.HtmlCache.Events.ClearCacheSite, Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
       </event>
       <event name="cache:clearCacheSiteAllLanguages:Remote">
-        <handler type="ProDirect.Foundation.HtmlCache.Events.ClearCacheSiteAllLanguages, ProDirect.Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
+        <handler type="Foundation.HtmlCache.Events.ClearCacheSiteAllLanguages, Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
       </event>
       <event name="cache:clearCacheAllSites:Remote">
-        <handler type="ProDirect.Foundation.HtmlCache.Events.ClearCacheAllSites, ProDirect.Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
+        <handler type="Foundation.HtmlCache.Events.ClearCacheAllSites, Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
       </event>
 
       <event name="publish:end">
@@ -64,7 +61,7 @@
       </event>
     </events>
     <controlSources>
-      <source mode="on" namespace="ProDirect.Foundation.HtmlCache.Controls" assembly="ProDirect.Foundation.HtmlCache" prefix="ProDirect.Foundation.HtmlCache"/>
+      <source mode="on" namespace="Foundation.HtmlCache.Controls" assembly="Foundation.HtmlCache" prefix="Foundation.HtmlCache"/>
     </controlSources>
   </sitecore>
 </configuration>
