--- a/code/packages.config
+++ b/code/packages.config
@@ -1,5 +1,54 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.CommandLine" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.EnvironmentVariables" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Ini" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Xml" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyModel" version="2.1.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.1" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
+  <package id="Rebus" version="5.0.1" targetFramework="net462" />
+  <package id="Rebus.SqlServer" version="5.0.3" targetFramework="net462" />
+  <package id="Sitecore.Framework.Conditions" version="4.0.0" targetFramework="net462" />
+  <package id="Sitecore.Framework.Configuration" version="5.3.0" targetFramework="net462" />
+  <package id="Sitecore.Framework.Configuration.Abstractions" version="5.3.0" targetFramework="net462" />
+  <package id="Sitecore.Framework.Configuration.Common" version="5.3.0" targetFramework="net462" />
+  <package id="Sitecore.Framework.Configuration.Extensions" version="5.3.0" targetFramework="net462" />
+  <package id="Sitecore.Framework.Messaging.Abstractions" version="4.0.1" targetFramework="net462" />
+  <package id="Sitecore.Framework.Messaging.Configuration" version="4.0.1" targetFramework="net462" />
+  <package id="Sitecore.Framework.Messaging.Rebus" version="4.0.1" targetFramework="net462" />
+  <package id="Sitecore.Framework.Messaging.Rebus.Configuration" version="4.0.1" targetFramework="net462" />
+  <package id="Sitecore.Framework.Messaging.Rebus.SqlServer" version="4.0.1" targetFramework="net462" />
+  <package id="Sitecore.Framework.TransientFaultHandling" version="2.2.0" targetFramework="net462" />
+  <package id="Sitecore.Framework.TransientFaultHandling.Abstractions" version="2.2.0" targetFramework="net462" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Mvc.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net462" />
+  <package id="System.Data.SqlClient" version="4.5.1" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net462" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Xml" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net462" />
+  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net462" />
 </packages>
