fixed publish and clear site handler issue.
Added persistant cache mechanism... However, neither the config or caching template fields are being read so far

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -9,6 +9,7 @@
       <!-- This setting contains all common templates that should be tracked across multiple renderings such as images, pdfs etc.-->
       <setting name="GlobalCacheableTemplateIDs" value="{DAF085E8-602E-43A6-8299-038FF171349F}"/>
       <setting name="ItemTrackingQueueProcessInterval" value="10000"/>
+      <setting name="PersistentCacheFolder">/App_Data/HtmlCache</setting>
     </settings>
     <pipelines>
       <initialize>
@@ -16,10 +17,16 @@
       </initialize>
       <mvc.renderRendering>
         <processor
-          type="Foundation.HtmlCache.Pipelines.BeginRenderingContextProcessor, Foundation.HtmlCache"
+          type="Foundation.HtmlCache.Pipelines.RenderFromPersistantCache, Foundation.HtmlCache"
           patch:after="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.RenderFromCache, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
         <processor
-          type="Foundation.HtmlCache.Pipelines.EndRenderingContextProcessor, Foundation.HtmlCache"
+          type="Foundation.HtmlCache.Pipelines.BeginRenderingContext, Foundation.HtmlCache"
+          patch:after="processor[@type='Foundation.HtmlCache.Pipelines.RenderFromPersistantCache, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
+        <processor
+          type="Foundation.HtmlCache.Pipelines.EndRenderingContext, Foundation.HtmlCache"
+          patch:before="processor[@type='Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
+        <processor
+          type="Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache"
           patch:before="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.AddRecordedHtmlToCache, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
       </mvc.renderRendering>
       <group name="itemProvider" groupName="itemProvider">
@@ -59,7 +66,7 @@
         <Foundation.HtmlCache.Bus.HtmlCacheMessageBus>
           <Transport>
             <SqlServer>
-              <OneWay role:require="Standalone or ContentDelivery">false</OneWay>
+              <OneWay role:require="Standalone">false</OneWay>
               <OneWay role:require="ContentManagement">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
               <TableName>Sitecore_Transport</TableName>
@@ -73,14 +80,14 @@
                   <Type>Foundation.HtmlCache.Models.AddToCache, Foundation.HtmlCache</Type>
                   <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
                 </TrackItemMapping>
-                <!-- <ItemsPublishedMapping> -->
-                <!--   <Type>SitecoreHacker.London.Foundation.EmailCampaign.EDS.Messaging.Model.EmailBounceMessage, SitecoreHacker.London</Type> -->
-                <!--   <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue> -->
-                <!-- </ItemsPublishedMapping> -->
-                <!-- <ClearSiteMapping> -->
-                <!--   <Type>SitecoreHacker.London.Foundation.EmailCampaign.EDS.Messaging.Model.EmailBounceMessage, SitecoreHacker.London</Type> -->
-                <!--   <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue> -->
-                <!-- </ClearSiteMapping> -->
+                <ItemsPublishedMapping>
+                  <Type>Foundation.HtmlCache.Models.DeleteFromCache, Foundation.HtmlCache</Type>
+                  <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
+                </ItemsPublishedMapping>
+                <ClearSiteMapping>
+                  <Type>Foundation.HtmlCache.Models.DeleteSiteFromCache, Foundation.HtmlCache</Type>
+                  <DestinationQueue>HtmlCacheMessageQueue</DestinationQueue>
+                </ClearSiteMapping>
               </TypeMappings>
             </TypeBasedMappings>
           </Routing>
@@ -88,7 +95,7 @@
             <SetNumberOfWorkers>1</SetNumberOfWorkers>
             <SimpleRetryStrategy>
               <ErrorQueueAddress>Error</ErrorQueueAddress>
-              <MaxDeliveryAttempts>1</MaxDeliveryAttempts>
+              <MaxDeliveryAttempts>0</MaxDeliveryAttempts>
               <SecondLevelRetriesEnabled>false</SecondLevelRetriesEnabled>
             </SimpleRetryStrategy>
           </Options>
