Finished persistence of cache to disk... Need to move it to initialize.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -9,7 +9,8 @@
       <!-- This setting contains all common templates that should be tracked across multiple renderings such as images, pdfs etc.-->
       <setting name="GlobalCacheableTemplateIDs" value="{DAF085E8-602E-43A6-8299-038FF171349F}"/>
       <setting name="ItemTrackingQueueProcessInterval" value="10000"/>
-      <setting name="PersistentCacheFolder">/App_Data/HtmlCache</setting>
+      <setting name="PersistentCacheFolder" value="/App_Data/HtmlCache" />
+      <setting name="PersistRecordedHtml" value="true" />
     </settings>
     <pipelines>
       <initialize>
