Fixed rendering from Persisted Cache.
Todo - Process persisted cache so that new caches are generated.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -14,6 +14,7 @@
     <pipelines>
       <initialize>
         <processor type="Foundation.HtmlCache.Pipelines.InitializeMessageBus, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentManagement or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.InitializePersistedHtmlCache, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
       </initialize>
       <mvc.renderRendering>
         <processor
