--- a/code/packages.config
+++ b/code/packages.config
@@ -3,6 +3,8 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="2.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
+  <package id="Sitecore.ContentSearch.Linq.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.ContentSearch.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Framework.Messaging.Abstractions" version="4.0.1" targetFramework="net462" />
   <package id="Sitecore.Framework.Messaging.Configuration" version="4.0.1" targetFramework="net462" />
   <package id="Sitecore.Kernel.NoReferences" version="9.0.180604" targetFramework="net462" developmentDependency="true" />
