Moved cache persistence code to be performed by a CM as many CD's would cause issues with concurrency.
Also moved out messages from models for code cleanup.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -8,7 +8,6 @@
     <settings>
       <!-- This setting contains all common templates that should be tracked across multiple renderings such as images, pdfs etc.-->
       <setting name="GlobalCacheableTemplateIDs" value="{DAF085E8-602E-43A6-8299-038FF171349F}"/>
-      <setting name="PersistentCacheFolder" value="/App_Data/HtmlCache" />
       <setting name="PersistRecordedHtml" value="true" />
 
       <setting name="MaxItemNameLength" value="100">
@@ -77,6 +76,7 @@
             <SqlServer>
               <OneWay role:require="Standalone">false</OneWay>
               <OneWay role:require="ContentManagement">true</OneWay>
+              <OneWay role:require="ContentDelivery">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
               <TableName>Sitecore_Transport</TableName>
               <InputQueueName>HtmlCacheMessageQueue</InputQueueName>
@@ -115,6 +115,7 @@
 
     <services>
       <configurator type="Foundation.HtmlCache.Configuration.ServicesConfigurator, Foundation.HtmlCache" role:require="Standalone or ContentDelivery"/>
+      <configurator type="Foundation.HtmlCache.Configuration.ServicesConfiguratorCm, Foundation.HtmlCache" role:require="Standalone or ContentManagement"/>
     </services>
 
     <contentSearch>
